--- a/www/file-manifest.json
+++ b/www/file-manifest.json
@@ -1,8 +1,8 @@
 {
   "static/js/0.2cf5bacda.chunk.js": "/static/js/0.2cf5bacda.chunk.js",
   "static/js/0.2cf5bacda.chunk.js.map": "/static/js/0.2cf5bacda.chunk.js.map",
-  "static/js/1.8ec60b652.chunk.js": "/static/js/1.8ec60b652.chunk.js",
-  "static/js/1.8ec60b652.chunk.js.map": "/static/js/1.8ec60b652.chunk.js.map",
+  "static/js/1.a34083d79.chunk.js": "/static/js/1.a34083d79.chunk.js",
+  "static/js/1.a34083d79.chunk.js.map": "/static/js/1.a34083d79.chunk.js.map",
   "static/js/2.53442668d.chunk.js": "/static/js/2.53442668d.chunk.js",
   "static/js/2.53442668d.chunk.js.map": "/static/js/2.53442668d.chunk.js.map",
   "static/js/3.3094592af.chunk.js": "/static/js/3.3094592af.chunk.js",
@@ -21,22 +21,22 @@
   "css-loader.js.map": "/static/js/css-loader.64087c7f5.chunk.js.map",
   "css-modules-loader-core.js": "/static/js/css-modules-loader-core.2b4823c95.chunk.js",
   "css-modules-loader-core.js.map": "/static/js/css-modules-loader-core.2b4823c95.chunk.js.map",
-  "default~sandbox~sandbox-startup.js": "/static/js/default~sandbox~sandbox-startup.103980746.chunk.js",
-  "default~sandbox~sandbox-startup.js.map": "/static/js/default~sandbox~sandbox-startup.103980746.chunk.js.map",
+  "default~sandbox~sandbox-startup.js": "/static/js/default~sandbox~sandbox-startup.0ba1b8f87.chunk.js",
+  "default~sandbox~sandbox-startup.js.map": "/static/js/default~sandbox~sandbox-startup.0ba1b8f87.chunk.js.map",
   "postcss-compiler.js": "/static/js/postcss-compiler.4310b8556.chunk.js",
   "postcss-compiler.js.map": "/static/js/postcss-compiler.4310b8556.chunk.js.map",
-  "sandbox.js": "/static/js/sandbox.ad5023824.js",
-  "sandbox.js.map": "/static/js/sandbox.ad5023824.js.map",
-  "sandbox-startup.js": "/static/js/sandbox-startup.e6d191957.js",
-  "sandbox-startup.js.map": "/static/js/sandbox-startup.e6d191957.js.map",
+  "sandbox.js": "/static/js/sandbox.49ab20ed7.js",
+  "sandbox.js.map": "/static/js/sandbox.49ab20ed7.js.map",
+  "sandbox-startup.js": "/static/js/sandbox-startup.8c232bbac.js",
+  "sandbox-startup.js.map": "/static/js/sandbox-startup.8c232bbac.js.map",
   "vendors~css-modules-loader-core.js": "/static/js/vendors~css-modules-loader-core.05c653935.chunk.js",
   "vendors~css-modules-loader-core.js.map": "/static/js/vendors~css-modules-loader-core.05c653935.chunk.js.map",
   "vendors~postcss-compiler~vue-style-compiler.js": "/static/js/vendors~postcss-compiler~vue-style-compiler.49745dd34.chunk.js",
   "vendors~postcss-compiler~vue-style-compiler.js.map": "/static/js/vendors~postcss-compiler~vue-style-compiler.49745dd34.chunk.js.map",
   "vendors~react-devtools-backend.js": "/static/js/vendors~react-devtools-backend.f9bb808e7.chunk.js",
   "vendors~react-devtools-backend.js.map": "/static/js/vendors~react-devtools-backend.f9bb808e7.chunk.js.map",
-  "vendors~sandbox.js": "/static/js/vendors~sandbox.311f7d00a.chunk.js",
-  "vendors~sandbox.js.map": "/static/js/vendors~sandbox.311f7d00a.chunk.js.map",
+  "vendors~sandbox.js": "/static/js/vendors~sandbox.66af76a2d.chunk.js",
+  "vendors~sandbox.js.map": "/static/js/vendors~sandbox.66af76a2d.chunk.js.map",
   "vendors~sandbox-startup.js": "/static/js/vendors~sandbox-startup.ca8a95b40.chunk.js",
   "vendors~sandbox-startup.js.map": "/static/js/vendors~sandbox-startup.ca8a95b40.chunk.js.map",
   "vendors~vue-loader~vue-selector~vue-template-compiler.js": "/static/js/vendors~vue-loader~vue-selector~vue-template-compiler.869041708.chunk.js",
@@ -53,18 +53,18 @@
   "vue-style-compiler.js.map": "/static/js/vue-style-compiler.f0f11a7be.chunk.js.map",
   "vue-template-compiler.js": "/static/js/vue-template-compiler.b8f7afc7a.chunk.js",
   "vue-template-compiler.js.map": "/static/js/vue-template-compiler.b8f7afc7a.chunk.js.map",
-  "0.babel-transpiler.5cc86523.worker.js": "/0.babel-transpiler.5cc86523.worker.js",
-  "0.babel-transpiler.5cc86523.worker.js.map": "/0.babel-transpiler.5cc86523.worker.js.map",
+  "0.babel-transpiler.2641e80b.worker.js": "/0.babel-transpiler.2641e80b.worker.js",
+  "0.babel-transpiler.2641e80b.worker.js.map": "/0.babel-transpiler.2641e80b.worker.js.map",
   "0.sass-transpiler.d0a9e805.worker.js": "/0.sass-transpiler.d0a9e805.worker.js",
   "0.sass-transpiler.d0a9e805.worker.js.map": "/0.sass-transpiler.d0a9e805.worker.js.map",
-  "1.babel-transpiler.5cc86523.worker.js": "/1.babel-transpiler.5cc86523.worker.js",
-  "1.babel-transpiler.5cc86523.worker.js.map": "/1.babel-transpiler.5cc86523.worker.js.map",
-  "babel-plugin-jsx-pragmatic.babel-transpiler.5cc86523.worker.js": "/babel-plugin-jsx-pragmatic.babel-transpiler.5cc86523.worker.js",
-  "babel-plugin-jsx-pragmatic.babel-transpiler.5cc86523.worker.js.map": "/babel-plugin-jsx-pragmatic.babel-transpiler.5cc86523.worker.js.map",
-  "babel-plugin-transform-vue-jsx.babel-transpiler.5cc86523.worker.js": "/babel-plugin-transform-vue-jsx.babel-transpiler.5cc86523.worker.js",
-  "babel-plugin-transform-vue-jsx.babel-transpiler.5cc86523.worker.js.map": "/babel-plugin-transform-vue-jsx.babel-transpiler.5cc86523.worker.js.map",
-  "babel-transpiler.5cc86523.worker.js": "/babel-transpiler.5cc86523.worker.js",
-  "babel-transpiler.5cc86523.worker.js.map": "/babel-transpiler.5cc86523.worker.js.map",
+  "1.babel-transpiler.2641e80b.worker.js": "/1.babel-transpiler.2641e80b.worker.js",
+  "1.babel-transpiler.2641e80b.worker.js.map": "/1.babel-transpiler.2641e80b.worker.js.map",
+  "babel-plugin-jsx-pragmatic.babel-transpiler.2641e80b.worker.js": "/babel-plugin-jsx-pragmatic.babel-transpiler.2641e80b.worker.js",
+  "babel-plugin-jsx-pragmatic.babel-transpiler.2641e80b.worker.js.map": "/babel-plugin-jsx-pragmatic.babel-transpiler.2641e80b.worker.js.map",
+  "babel-plugin-transform-vue-jsx.babel-transpiler.2641e80b.worker.js": "/babel-plugin-transform-vue-jsx.babel-transpiler.2641e80b.worker.js",
+  "babel-plugin-transform-vue-jsx.babel-transpiler.2641e80b.worker.js.map": "/babel-plugin-transform-vue-jsx.babel-transpiler.2641e80b.worker.js.map",
+  "babel-transpiler.2641e80b.worker.js": "/babel-transpiler.2641e80b.worker.js",
+  "babel-transpiler.2641e80b.worker.js.map": "/babel-transpiler.2641e80b.worker.js.map",
   "coffee-transpiler.6abe87e8.worker.js": "/coffee-transpiler.6abe87e8.worker.js",
   "coffee-transpiler.6abe87e8.worker.js.map": "/coffee-transpiler.6abe87e8.worker.js.map",
   "index.html": "/index.html",
@@ -72,7 +72,7 @@
   "less-transpiler.74a88bd2.worker.js.map": "/less-transpiler.74a88bd2.worker.js.map",
   "parcel-html-transpiler.e0273d5a.worker.js": "/parcel-html-transpiler.e0273d5a.worker.js",
   "parcel-html-transpiler.e0273d5a.worker.js.map": "/parcel-html-transpiler.e0273d5a.worker.js.map",
-  "public/sse-hooks/sse-hooks.js": "/public/sse-hooks/sse-hooks.4c9f35bc224af4feea8e55c558d87724.js",
+  "public/sse-hooks/sse-hooks.js": "/public/sse-hooks/sse-hooks.640d25fbe445d3bcbb35b7f73ceca915.js",
   "pug-transpiler.41006669.worker.js": "/pug-transpiler.41006669.worker.js",
   "pug-transpiler.41006669.worker.js.map": "/pug-transpiler.41006669.worker.js.map",
   "sass-transpiler.d0a9e805.worker.js": "/sass-transpiler.d0a9e805.worker.js",
@@ -81,8 +81,9 @@
   "stylus-transpiler.428164ba.worker.js.map": "/stylus-transpiler.428164ba.worker.js.map",
   "svelte-transpiler.9ca0e0b3.worker.js": "/svelte-transpiler.9ca0e0b3.worker.js",
   "svelte-transpiler.9ca0e0b3.worker.js.map": "/svelte-transpiler.9ca0e0b3.worker.js.map",
-  "transform-cx-jsx.babel-transpiler.5cc86523.worker.js": "/transform-cx-jsx.babel-transpiler.5cc86523.worker.js",
-  "transform-cx-jsx.babel-transpiler.5cc86523.worker.js.map": "/transform-cx-jsx.babel-transpiler.5cc86523.worker.js.map",
+  "sw.no-webpack.js": "/sw.2c447226.worker.js",
+  "transform-cx-jsx.babel-transpiler.2641e80b.worker.js": "/transform-cx-jsx.babel-transpiler.2641e80b.worker.js",
+  "transform-cx-jsx.babel-transpiler.2641e80b.worker.js.map": "/transform-cx-jsx.babel-transpiler.2641e80b.worker.js.map",
   "typescript-transpiler.1585b49f.worker.js": "/typescript-transpiler.1585b49f.worker.js",
   "typescript-transpiler.1585b49f.worker.js.map": "/typescript-transpiler.1585b49f.worker.js.map"
 }
